Navibar overlapping content after scrooling - Fixed

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     height: 100%;
     width: 100%;
     font-family: 'Oswald', sans-serif;
+
 }
 
 
@@ -137,12 +138,11 @@ h2{
 }
 
 #history{
-    padding: 0px 16px 16px;
+    padding: 0px 16px;
 }
 
 #features{
-    display: inline-flex;
-    flex-direction: row;
+    display: flex;
     justify-content: space-between;
     padding: 0;
 }
